# gitstats

./: README.md  pyproject.toml  requirements.txt
app/: main.py
scripts/: branches.py  commit_count.py  commit_statistics.py  set_branch.py  top_authors.py  utils.py
